--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 
+  <!-- navbar -->
   <nav id="main-nav" class="nav">
     <div class="container">
       <img src="img/logo.png" alt="" class="logo">
@@ -27,6 +28,23 @@
       </div>
     </div>
   </nav>
+  <!-- navbar -->
+
+  <!-- header -->
+  
+  <header id="header">
+    <div class="container">
+      <div class="header-container">
+        <div class= "header-content">
+          <div class="category bg-secondary">Sports</div>
+          <h1>World Rowing Race</h1>
+          <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure asperiores sunt culpa nam repellendus a, ipsa corrupti quas tempore nemo eos illo similique quisquam mollitia ut iusto at est exercitationem?</p>
+          <a href="#" class="btn btn-primary">Read More</a>
+        </div>
+      </div>
+    </div>
+  </header>
+
 
   
 
