Feat: Implemented static main content/articles section layout

--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
   <!-- navbar -->
 
   <!-- header -->
-  
   <header id="header">
     <div class="container">
       <div class="header-container">
@@ -44,6 +43,69 @@
       </div>
     </div>
   </header>
+  <!-- header -->
+
+
+  <section id="main-articles">
+    <div class="container">
+      <h2>Latest News</h2>
+      <div class="article-containers">
+        <article class="card">
+          <img src="img/img-1.webp" alt="">
+          <div>
+            <div class="category bg-secondary">Sport</div>
+            <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ab ducimus amet aliquam ipsam odit.</p>
+          </div>
+        </article>
+
+        <article class="card">
+          <img src="img/img-2.webp" alt="">
+          <div>
+            <div class="category bg-secondary">Economy</div>
+            <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ab ducimus amet aliquam ipsam odit.</p>
+          </div>
+        </article>
+
+        <article class="card">
+          <img src="img/img-3.webp" alt="">
+          <div>
+            <div class="category bg-primary">Health</div>
+            <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ab ducimus amet aliquam ipsam odit.</p>
+          </div>
+        </article>
+
+        <article class="card">
+          <img src="img/img-2.webp" alt="">
+          <div>
+            <div class="category bg-secondary">Sport</div>
+            <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ab ducimus amet aliquam ipsam odit.</p>
+          </div>
+        </article>
+
+        <article class="card">
+          <img src="img/img-2.webp" alt="">
+          <div>
+            <div class="category bg-primary">Sport</div>
+            <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ab ducimus amet aliquam ipsam odit.</p>
+          </div>
+        </article>
+
+        <article class="card">
+          <img src="img/img-1.webp" alt="">
+          <div>
+            <div class="category bg-secondary">Sport</div>
+            <h3><a href="article.html">Lorem ipsum dolor sit amet.</a></h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore ab ducimus amet aliquam ipsam odit.</p>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
 
 
   
