--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
   </header>
   <!-- header -->
 
-
-  <section id="main-articles">
+<!-- articles -->
+  <section id="main-articles" class="py-2">
     <div class="container">
       <h2>Latest News</h2>
       <div class="article-containers">
@@ -106,6 +106,51 @@
       </div>
     </div>
   </section>
+<!-- articles -->
+
+<!-- footer -->
+
+<footer id="main-footer" class="py-2">
+  <div class="container footer-container">
+    <div>
+      <img src="img/logo.png" alt="">
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magni ab itaque modi ad suscipit cumque recusandae aspernatur possimus temporibus sint.</p>
+    </div>
+    <div>
+      <h3>Join Us</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, vel.</p>
+      <form action="">
+        <input type="email" name="" id="" placeholder="Enter email">
+        <input type="submit" value="Subscribe" class="btn btn-primary">
+      </form>
+    </div>
+    <div>
+      <h3>Links</h3>
+      <ul>
+        <li><a href="#">Help & Suppport</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">about Us</a></li>
+        <li><a href="#">Contact Us</a></li>
+      </ul>
+    </div>
+
+    <div>
+      <h3>Follow Us</h3>
+      <div>
+        <a href=""><i class="fab fa-facebook fa-2x"></i></a>
+        <a href=""><i class="fab fa-twitter fa-2x"></i></a>
+        <a href=""><i class="fab fa-instagram fa-2x"></i></a>
+        <a href=""><i class="fab fa-youtube fa-2x"></i></a>
+      </div>
+    </div>
+
+    <div>
+      <p>Copyright &copy; 2025, All Rights Reserved</p>
+    </div>
+
+
+  </div>
+</footer>
 
 
   
