--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css" integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Varela+Round&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen and (max-width:768px)"  href="css/mobile.css">
   <title>News Site</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
       <img src="img/logo.png" alt="" class="logo">
       <ul>
         <li><a class="active" href="index.html">Home</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="article.html">About</a></li>
         <li><a href="blog.html">Blog</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
@@ -49,7 +50,7 @@
   <section id="main-articles" class="py-2">
     <div class="container">
       <h2>Latest News</h2>
-      <div class="article-containers">
+      <div class="articles-containers">
         <article class="card">
           <img src="img/img-1.webp" alt="">
           <div>
@@ -129,7 +130,7 @@
       <ul>
         <li><a href="#">Help & Suppport</a></li>
         <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">about Us</a></li>
+        <li><a href="#">About Us</a></li>
         <li><a href="#">Contact Us</a></li>
       </ul>
     </div>
